fix: also use wrap for navigation-items that are no buttons

--- a/packages/components/src/components/navigation-item/navigation-item.scss
+++ b/packages/components/src/components/navigation-item/navigation-item.scss
@@ -88,11 +88,9 @@
 	inline-size: auto;
 
 	&[data-wrap="true"] {
-		.db-navigation-item-expand-button {
-			&:is(button) {
-				white-space: normal;
-				text-align: start;
-			}
+		:is(a, .db-navigation-item-expand-button):first-of-type {
+			white-space: normal;
+			text-align: start;
 		}
 	}
 
